--- a/dotfiles/mackup.cfg
+++ b/dotfiles/mackup.cfg
@@ -1,3 +1,8 @@
+###############################################################################
+# mackup.cfg
+###############################################################################
+
+
 [storage]
 engine = file_system
 path = /Dropbox/_config/appdata/Mackup
