Refactor entire dotfiles project for better organization. See readme for details

--- a/dotfiles/mackup.cfg
+++ b/dotfiles/mackup.cfg
@@ -1,6 +1,15 @@
+#!/bin/bash
+
 ###############################################################################
-# bash_work
+# Mackup config
 ###############################################################################
 
-alias cdu='cd ~/Uber'
-alias cdub='cd ~/Uber/Box\ Sync'
+[storage]
+engine = file_system
+path = Dropbox/_config/appdata
+
+[applications_to_sync]
+hyper
+iterm2
+terminal
+vscode
