Refactor for macOS Catalina. Move to oh-my-zsh. Remove unnecessary dotfiles.

--- a/dotfiles/mackup.cfg
+++ b/dotfiles/mackup.cfg
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/zsh
 
 ###############################################################################
 # Mackup config
@@ -6,7 +6,7 @@
 
 [storage]
 engine = file_system
-path = Dropbox/_config/appdata
+path = ~/Dropbox/_config/appdata
 
 [applications_to_sync]
 hyper
